tests/expectations/compiler/core/algorithms/integers/bhp256/bhp256_hash_to_u128.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:23
     |
  28 |         let a: u128 = BHP256::hash_to_u128(addr_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:23
     |
  29 |         let b: u128 = BHP256::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:23
     |
  30 |         let c: u128 = BHP256::hash_to_u128(field_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:23
     |
  31 |         let d: u128 = BHP256::hash_to_u128(group_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:23
     |
  32 |         let e: u128 = BHP256::hash_to_u128(i8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:23
     |
  33 |         let f: u128 = BHP256::hash_to_u128(i16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:23
     |
  34 |         let g: u128 = BHP256::hash_to_u128(i32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:23
     |
  35 |         let h: u128 = BHP256::hash_to_u128(i64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:23
     |
  36 |         let i: u128 = BHP256::hash_to_u128(i128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:23
     |
  37 |         let j: u128 = BHP256::hash_to_u128(u8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:23
     |
  38 |         let k: u128 = BHP256::hash_to_u128(u16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:23
     |
  39 |         let l: u128 = BHP256::hash_to_u128(u32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:23
     |
  40 |         let m: u128 = BHP256::hash_to_u128(u64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:23
     |
  41 |         let n: u128 = BHP256::hash_to_u128(u128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:23
     |
  42 |         let o: u128 = BHP256::hash_to_u128(scalar_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:23
     |
  44 |         let q: u128 = BHP256::hash_to_u128(Foo { a: 1u128, b: 1u128 });
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.bhp256 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as u128;
    hash.bhp256 true into r9 as u128;
    hash.bhp256 1field into r10 as u128;
    hash.bhp256 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as u128;
    hash.bhp256 r0 into r12 as u128;
    hash.bhp256 r1 into r13 as u128;
    hash.bhp256 r2 into r14 as u128;
    hash.bhp256 r3 into r15 as u128;
    hash.bhp256 1i128 into r16 as u128;
    hash.bhp256 r4 into r17 as u128;
    hash.bhp256 r5 into r18 as u128;
    hash.bhp256 r6 into r19 as u128;
    hash.bhp256 r7 into r20 as u128;
    hash.bhp256 1u128 into r21 as u128;
    hash.bhp256 1scalar into r22 as u128;
    output r8 as u128.private;
    output r9 as u128.private;
    output r10 as u128.private;
    output r11 as u128.private;
    output r12 as u128.private;
    output r13 as u128.private;
    output r14 as u128.private;
    output r15 as u128.private;
    output r16 as u128.private;
    output r17 as u128.private;
    output r18 as u128.private;
    output r19 as u128.private;
    output r20 as u128.private;
    output r21 as u128.private;
    output r22 as u128.private;
    output 246120589282957185507862152884389016820u128 as u128.private;
>>>>>>> mainnet
